[package]
name = "upwd"
version = "0.3.0"
authors = ["Andrey Vikulov <avikuloff@yandex.ru>"]
license = "MIT OR Apache-2.0"
description = "Random password generator"
keywords = ["cli", "password"]
categories = ["command-line-utilities"]
repository = "https://github.com/avikuloff/upwd/"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
clap = "3.0.0-beta.1"
num-bigint = "0.3"
num-traits = "0.2"
indexmap = { version = "1.6", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
confy = "0.4"