[package]
name = "upwd"
version = "0.3.3"
authors = ["Andrey Vikulov <avikuloff@yandex.ru>"]
license = "MIT OR Apache-2.0"
description = "Random password generator"
keywords = ["cli", "password"]
categories = ["command-line-utilities"]
homepage = "https://github.com/avikuloff/upwd/"
repository = "https://github.com/avikuloff/upwd/"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
confy = "0.4"
exitcode = "1.1"
upwd-lib = "0.1"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"